--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sass": "^1.45.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
@@ -21,6 +22,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.90.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
