--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "@types/date-fns": "^2.6.3",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^19.0.0",   
-    "@types/react-dom": "^19.0.0",   
-    "@types/react-router-dom": "^5.3.3", 
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-pro-sidebar": "^1.1.0",
-    "react-router-dom": "^7.8.0",
-    "react-scripts": "5.0.1",    
+    "react-router-dom": "6",
+    "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
